# logshield-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
logshield/: cli.py  client.py  config.py  tui.py
