[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logshield"
version = "0.1.0"
description = "Sanitize logs, code, and secrets before sending to LLMs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "hexg1", email = "219017309+hexg1@users.noreply.github.com" }]
keywords = ["security", "llm", "sanitizer", "secrets", "privacy", "chatgpt", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "prompt_toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "build", "twine"]

[project.scripts]
logshield = "logshield.cli:run"

[project.urls]
Homepage = "https://logshield.dev"
Repository = "https://github.com/hexg1/logshield-cli"

[tool.setuptools]
packages = ["logshield"]
